--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "fix:scripts": "gulp scripts:fix",
     "fix:scss": "gulp styles:fix",
     "fix": "gulp fix",
-    "_lint:fix": "eslint --fix ./packages/bolt-build-tools",
-    "lint:js": "eslint ./packages/bolt-build-tools",
+    "lint:fix": "eslint --fix ./build-tools",
+    "lint:js": "eslint ./build-tools",
     "lint:md": "remark . --quiet --frail",
     "lint:scss": "gulp styles:lint",
     "clean:lerna": "lerna clean -Y",
@@ -22,7 +22,7 @@
     "mocha": "npm run mocha:settings && npm run mocha:build-tools",
     "mocha:build-tools": "mocha ./packages/**/build-*/tests/*.test.js",
     "mocha:settings": "mocha **/settings-*/tests/*.test.js",
-    "deploy": "node packages/bolt-build-tools/build-slack/index.js",
+    "deploy": "node build-tools/build-slack/index.js",
     "postinstall": "npm run bootstrap && npm run setup:composer",
     "prepublishOnly": "npm run snyk-protect",
     "publish-beta": "lerna run build && lerna publish --npm-tag=beta --skip-git",
@@ -31,7 +31,7 @@
     "publish": "lerna run build && lerna run publish-please && lerna publish --no-git",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
     "serve": "gulp serve",
-    "setup:composer": "if [ ! -f ./bolt-website/pattern-lab/index.html ]; then cd pattern-lab && rm -rf composer.lock && rm -rf vendor && composer install --no-interaction --prefer-dist --no-dev; fi",
+    "setup:composer": "if [ ! -f ./bolt-website/index.html ]; then rm -rf composer.lock && rm -rf vendor && composer install --no-interaction --prefer-dist --no-dev; fi",
     "setup:homebrew": "sh scripts/install-homebrew.sh",
     "snyk-protect": "snyk protect",
     "start": "serve ./boltdesignsystem --single",
@@ -67,7 +67,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/pega-digital/bolt.git"
+    "url": "git+https://github.com/bolt-design-system/bolt.git"
   },
   "keywords": [
     "design",
@@ -76,9 +76,9 @@
   "author": "Salem Ghoweri",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/pega-digital/bolt/issues"
+    "url": "https://github.com/bolt-design-system/bolt/issues"
   },
-  "homepage": "https://github.com/pega-digital/bolt#readme",
+  "homepage": "https://github.com/bolt-design-system/bolt#readme",
   "dependencies": {
     "babel-core": "^6.22.1",
     "babel-loader": "^7.0.0",
