--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "glob": "^7.1.2",
     "globby": "^6.1.0",
     "gulp": "github:gulpjs/gulp#4.0",
+    "gulp-util": "^3.0.8",
     "husky": "^0.14.3",
     "inquirer": "^3.2.0",
     "js-yaml": "^3.9.1",
