--- a/build-tools/package.json
+++ b/build-tools/package.json
@@ -29,7 +29,7 @@
     "@bolt/build-patternlab": "^0.3.0",
     "@bolt/build-server": "^0.2.0",
     "@bolt/build-slack": "^0.3.0",
-    "@bolt/build-styles": "^0.3.0",
+    "@bolt/build-styles": "^0.4.0-alpha.649a2b68",
     "@bolt/build-symlinks": "^0.3.0",
     "@bolt/build-webpack": "^0.1.0",
     "gulp-cached": "^1.1.1",
