--- a/src/components/bolt-critical-fonts/package.json
+++ b/src/components/bolt-critical-fonts/package.json
@@ -15,6 +15,9 @@
   ],
   "author": "Salem Ghoweri",
   "license": "MIT",
+  "devDependencies": {
+    "@bolt/build-webpack": "^0.3.0-alpha.0"
+  },
   "dependencies": {
     "@bolt/elements-headings": "^0.4.0-alpha.0",
     "@bolt/elements-page": "^0.5.0-alpha.0",
@@ -27,5 +30,8 @@
     "access": "public"
   },
   "main": "src/critical-fonts.js",
-  "style": "src/critical-fonts.css"
+  "style": "src/critical-fonts.css",
+  "scripts": {
+    "build": "webpack --config ./node_modules/@bolt/build-webpack/webpack.config.cli.js --entry critical-fonts=./src/critical-fonts"
+  }
 }
