--- a/src/components/bolt-ordered-list/package.json
+++ b/src/components/bolt-ordered-list/package.json
@@ -38,7 +38,7 @@
 		"access": "public"
 	},
 	"dependencies": {
-		"@bolt/settings-colors": "^0.4.0",
+		"@bolt/settings-colors": "^0.6.0-alpha.0",
 		"@bolt/settings-font-size": "^0.8.0-alpha.0",
 		"@bolt/settings-font-weight": "^0.8.0-alpha.0",
 		"@bolt/tools-color-palette": "^0.4.0",
