--- a/src/components/bolt-unordered-list/package.json
+++ b/src/components/bolt-unordered-list/package.json
@@ -38,7 +38,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/settings-colors": "^0.4.0",
+    "@bolt/settings-colors": "^0.6.0-alpha.0",
     "@bolt/tools-color-palette": "^0.4.0",
     "@bolt/tools-spacing": "^0.4.0"
   }
