--- a/src/styles/01-settings/settings-font-size/package.json
+++ b/src/styles/01-settings/settings-font-size/package.json
@@ -38,7 +38,7 @@
   "dependencies": {
     "@bolt/settings-breakpoints": "^0.7.0-alpha.0",
     "@bolt/settings-global": "^0.7.0-alpha.0",
-    "@bolt/tools-breakpoint": "^0.2.0-alpha.f4009816",
+    "@bolt/tools-breakpoint": "^0.2.0-alpha.0",
     "@bolt/tools-px-to-rem": "^0.2.0-alpha.0"
   },
   "scripts": {
