--- a/src/styles/02-tools/tools-all/package.json
+++ b/src/styles/02-tools/tools-all/package.json
@@ -36,7 +36,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/tools-breakpoint": "^0.2.0-alpha.f4009816",
+    "@bolt/tools-breakpoint": "^0.2.0-alpha.0",
     "@bolt/tools-button-color": "^0.5.0-alpha.0",
     "@bolt/tools-clearfix": "^0.6.0-alpha.0",
     "@bolt/tools-color-palette": "^0.5.0-alpha.0",
