--- a/src/styles/02-tools/tools-breakpoint/package.json
+++ b/src/styles/02-tools/tools-breakpoint/package.json
@@ -8,7 +8,7 @@
     "design system",
     "breakpoint"
   ],
-  "version": "0.2.0-alpha.e2f447e3",
+  "version": "0.2.0-alpha.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
