--- a/src/components/bolt-blockquote/package.json
+++ b/src/components/bolt-blockquote/package.json
@@ -40,7 +40,7 @@
 	"dependencies": {
 		"@bolt/settings-colors": "^0.6.0-alpha.0",
 		"@bolt/settings-global": "^0.7.0-alpha.0",
-		"@bolt/tools-color-palette": "^0.4.0",
-		"@bolt/tools-spacing": "^0.4.0"
+		"@bolt/tools-color-palette": "^0.5.0-alpha.0",
+		"@bolt/tools-spacing": "^0.5.0-alpha.0"
 	}
 }
