--- a/src/components/bolt-ordered-list/package.json
+++ b/src/components/bolt-ordered-list/package.json
@@ -41,9 +41,9 @@
 		"@bolt/settings-colors": "^0.6.0-alpha.0",
 		"@bolt/settings-font-size": "^0.8.0-alpha.0",
 		"@bolt/settings-font-weight": "^0.8.0-alpha.0",
-		"@bolt/tools-color-palette": "^0.4.0",
+		"@bolt/tools-color-palette": "^0.5.0-alpha.0",
 		"@bolt/tools-font-size": "^0.5.0-alpha.0",
 		"@bolt/tools-font-weight": "^0.5.0-alpha.0",
-		"@bolt/tools-spacing": "^0.4.0"
+		"@bolt/tools-spacing": "^0.5.0-alpha.0"
 	}
 }
