--- a/src/components/bolt-unordered-list/package.json
+++ b/src/components/bolt-unordered-list/package.json
@@ -39,7 +39,7 @@
   },
   "dependencies": {
     "@bolt/settings-colors": "^0.6.0-alpha.0",
-    "@bolt/tools-color-palette": "^0.4.0",
-    "@bolt/tools-spacing": "^0.4.0"
+    "@bolt/tools-color-palette": "^0.5.0-alpha.0",
+    "@bolt/tools-spacing": "^0.5.0-alpha.0"
   }
 }
