--- a/src/components/package.json
+++ b/src/components/package.json
@@ -35,7 +35,7 @@
 		"access": "public"
 	},
 	"dependencies": {
-		"@bolt/components-action-blocks": "0.3.0-alpha.f4009816",
+		"@bolt/components-action-blocks": "^0.3.0-alpha.0",
 		"@bolt/components-background": "^0.2.0-alpha.0",
 		"@bolt/components-band": "^0.2.0-alpha.0",
 		"@bolt/components-blockquote": "^0.1.0-alpha.0",
@@ -48,8 +48,8 @@
 		"@bolt/components-critical-fonts": "^0.4.0-alpha.0",
 		"@bolt/components-critical-path": "^0.2.0-alpha.0",
 		"@bolt/components-headline": "^0.5.0-alpha.0",
-		"@bolt/components-icon": "^0.1.0-alpha.f4009816",
-		"@bolt/components-icons": "^0.1.0-alpha.f4009816",
+		"@bolt/components-icon": "^0.1.0-alpha.0",
+		"@bolt/components-icons": "^0.1.0-alpha.0",
 		"@bolt/components-image": "^0.2.0-alpha.0",
 		"@bolt/components-logo": "^0.2.0-alpha.0",
 		"@bolt/components-ordered-list": "^0.1.0-alpha.0",
