--- a/apps/pattern-lab--workshop/package.json
+++ b/apps/pattern-lab--workshop/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@bolt/build-tools": "0.5.1",
+    "@bolt/components-button": "0.7.0-beta.5",
     "@bolt/core": "0.5.0-beta.1",
     "@bolt/global": "0.5.0"
   }
