--- a/packages/bolt-core/package.json
+++ b/packages/bolt-core/package.json
@@ -11,6 +11,12 @@
   "dependencies": {
     "@bolt/core-data": "^0.9.0-rc.5",
     "@webcomponents/webcomponentsjs": "^1.0.22",
+    "@webcomponents/webcomponents-platform": "^1.0.0",
+    "@webcomponents/template": "^1.2.2",
+    "@webcomponents/html-imports": "^1.1.0",
+    "@webcomponents/shadydom": "^1.0.11",
+    "@webcomponents/custom-elements": "^1.0.6",
+    "@webcomponents/shadycss": "^1.1.0",
     "core-js": "^2.5.1",
     "es6-promise": "^4.1.1",
     "preact": "^8.2.5",
