--- a/apps/pattern-lab--workshop/package.json
+++ b/apps/pattern-lab--workshop/package.json
@@ -19,6 +19,7 @@
     "@bolt/components-action-blocks": "0.3.0",
     "@bolt/components-background": "0.3.0-beta.2",
     "@bolt/components-background-shapes": "0.1.0-beta.2",
+    "@bolt/components-blockquote": "0.2.4",
     "@bolt/components-button": "0.7.0-beta.5",
     "@bolt/core": "0.5.0-beta.1",
     "@bolt/global": "0.5.0"
