--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "packages/components/bolt-action-blocks",
     "packages/components/bolt-background",
     "packages/components/bolt-background-shapes",
+    "packages/components/bolt-blockquote",
     "packages/components/bolt-button",
     "packages/core",
     "packages/global",
