--- a/packages/components/bolt-blockquote/package.json
+++ b/packages/components/bolt-blockquote/package.json
@@ -1,8 +1,6 @@
 {
 	"name": "@bolt/components-blockquote",
 	"description": "Blockquote Component in Bolt",
-	"type": "pattern",
-	"patternType": "molecules",
 	"keywords": [
 		"bolt design system",
 		"bolt",
@@ -38,9 +36,6 @@
 		"access": "public"
 	},
 	"dependencies": {
-		"@bolt/settings-colors": "^0.6.1",
-		"@bolt/settings-global": "^0.7.3",
-		"@bolt/tools-color-palette": "^0.5.2",
-		"@bolt/tools-spacing": "^0.5.0"
+		"@bolt/core": "^0.5.0-beta.1"
 	}
 }
