--- a/apps/pattern-lab--workshop/package.json
+++ b/apps/pattern-lab--workshop/package.json
@@ -24,6 +24,7 @@
     "@bolt/components-button-group": "0.2.0",
     "@bolt/components-chip": "0.2.0",
     "@bolt/components-chip-list": "0.2.0",
+    "@bolt/components-figure": "0.2.0-beta.2",
     "@bolt/core": "0.5.0-beta.1",
     "@bolt/global": "0.5.0"
   }
