--- a/packages/components/bolt-figure/package.json
+++ b/packages/components/bolt-figure/package.json
@@ -38,9 +38,6 @@
 		"access": "public"
 	},
 	"dependencies": {
-		"@bolt/settings-colors": "^0.6.1",
-		"@bolt/settings-global": "^0.7.3",
-		"@bolt/tools-color-palette": "^0.5.2",
-		"@bolt/tools-spacing": "^0.5.0"
+		"@bolt/core": "0.5.0-beta.1"
 	}
 }
