--- a/apps/pattern-lab--workshop/package.json
+++ b/apps/pattern-lab--workshop/package.json
@@ -29,6 +29,7 @@
     "@bolt/components-ordered-list": "0.1.4",
     "@bolt/components-page-footer": "0.4.0",
     "@bolt/components-page-header": "0.0.3-beta.4",
+    "@bolt/components-site": "0.5.0",
     "@bolt/components-teaser": "0.2.0",
     "@bolt/components-unordered-list": "0.1.2",
     "@bolt/core": "0.5.0-beta.1",
