--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "packages/components/bolt-ordered-list",
     "packages/components/bolt-page-footer",
     "packages/components/bolt-page-header",
+    "packages/components/bolt-site",
     "packages/components/bolt-teaser",
     "packages/components/bolt-unordered-list",
     "packages/core",
