Adding serve command

--- a/packages/build-tools/package.json
+++ b/packages/build-tools/package.json
@@ -29,6 +29,7 @@
     "@theme-tools/sass-import-globbing": "^1.0.0",
     "autoprefixer": "^7.2.4",
     "babel-loader": "^7.1.2",
+    "browser-sync": "^2.23.5",
     "chalk": "^2.3.0",
     "chokidar": "^2.0.0",
     "clean-css-loader": "^0.1.4",
