--- a/packages/components/background-shapes/package.json
+++ b/packages/components/background-shapes/package.json
@@ -9,7 +9,7 @@
     "css framework",
     "design system"
   ],
-  "version": "0.1.0-beta.2",
+  "version": "1.0.0-alpha.0-x",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -40,6 +40,6 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/core": "^0.5.0-beta.1"
+    "@bolt/core": "1.0.0-alpha.0-x"
   }
 }
