--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bolt/core",
   "description": "Core dependencies, utils, etc.",
-  "version": "0.5.0-beta.1",
+  "version": "1.0.0-alpha.0-x",
   "license": "MIT",
   "main": "index.js",
   "style": "styles/index.scss",
