--- a/packages/global/package.json
+++ b/packages/global/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bolt/global",
   "description": "Global styles for Bolt Design System",
-  "version": "0.5.0",
+  "version": "1.0.0-alpha.0-x",
   "license": "MIT",
   "style": "styles/index.scss",
   "repository": {
@@ -9,7 +9,7 @@
     "url": "https://github.com/bolt-design-system/bolt"
   },
   "dependencies": {
-    "@bolt/core": "0.5.0-beta.1",
+    "@bolt/core": "1.0.0-alpha.0-x",
     "normalize-scss": "^7.0.0"
   }
 }
