--- a/packages/build-tools/package.json
+++ b/packages/build-tools/package.json
@@ -36,6 +36,7 @@
     "commander": "^2.12.2",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
+    "gulp-util": "^3.0.8",
     "js-yaml": "^3.10.0",
     "lodash.debounce": "^4.0.8",
     "node-notifier": "^5.1.2",
@@ -46,7 +47,8 @@
     "semver": "^5.4.1",
     "style-loader": "^0.19.1",
     "webpack": "^3.10.0",
-    "webpack-manifest-plugin": "^1.3.2"
+    "webpack-dev-server": "^2.10.1",
+    "webpack-manifest-plugin": "^2.0.0-rc.1"
   },
   "publishConfig": {
     "access": "public"
