--- a/apps/pattern-lab--workshop/config/config.yml
+++ b/apps/pattern-lab--workshop/config/config.yml
@@ -1,5 +1,5 @@
 v: 2.6.0
-regenerateStyleguideKit: 'false'
+regenerateStyleguideKit: 'true'
 overrideConfig: false
 ie:
     - DS_Store
@@ -25,6 +25,8 @@ publicDir: www
 sourceDir: src
 defaultPattern: pages-bolt-homepage
 defaultShowPatternInfo: false
+ishMinimum: '240'
+ishMaximum: '2600'
 ishViewportRange:
     s:
         - 320
