--- a/packages/components/button/package.json
+++ b/packages/components/button/package.json
@@ -11,7 +11,7 @@
     "ui toolkit",
     "design system"
   ],
-  "version": "1.0.0-alpha.0-x",
+  "version": "0.7.0-beta.5",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
@@ -26,7 +26,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/core": "1.0.0-alpha.0-x"
+    "@bolt/core": "0.5.0-beta.1"
   },
   "scripts": {}
 }
