--- a/apps/pattern-lab--workshop/package.json
+++ b/apps/pattern-lab--workshop/package.json
@@ -18,6 +18,7 @@
     "@bolt/build-tools": "0.5.1",
     "@bolt/components-background-shapes": "0.1.0-beta.2",
     "@bolt/components-button": "0.7.0-beta.5",
+    "@bolt/components-color-swatch": "0.9.0",
     "@bolt/core": "0.5.0-beta.1",
     "@bolt/global": "0.5.0"
   }
