--- a/packages/components/color-swatch/package.json
+++ b/packages/components/color-swatch/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bolt/components-color-swatch",
   "description": "Color Swatch Component",
-  "version": "1.0.0-alpha.0-x",
+  "version": "0.9.0",
   "license": "MIT",
   "publishConfig": {
     "access": "public"
