Adding Build Tools config schema

--- a/packages/build-tools/package.json
+++ b/packages/build-tools/package.json
@@ -37,6 +37,7 @@
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
     "js-yaml": "^3.10.0",
+    "jsonschema": "^1.2.2",
     "lodash.debounce": "^4.0.8",
     "node-notifier": "^5.1.2",
     "npm-sass": "^2.2.1",
