--- a/packages/components/bolt-background/package.json
+++ b/packages/components/bolt-background/package.json
@@ -36,6 +36,6 @@
   },
   "dependencies": {
     "@bolt/core": "0.5.0-beta.1",
-    "@bolt/components-background-shapes": "0.1.0-beta.2",
+    "@bolt/components-background-shapes": "0.1.0-beta.2"
   }
 }
