Updating `npm start` command to build, then watch

--- a/apps/pattern-lab--workshop/package.json
+++ b/apps/pattern-lab--workshop/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "bolt build",
     "build:noisy": "bolt build --verbosity 5",
-    "start": "bolt build --watch"
+    "start": "bolt build && bolt build --watch"
   },
   "repository": {
     "type": "git",
