--- a/apps/pattern-lab/package.json
+++ b/apps/pattern-lab/package.json
@@ -26,6 +26,7 @@
     "@bolt/components-band": "^1.0.0-rc.3",
     "@bolt/components-blockquote": "^1.0.0-rc.3",
     "@bolt/components-breadcrumb": "^1.0.0-rc.3",
+    "@bolt/components-brightcove-player": "^1.0.0-rc.3",
     "@bolt/components-button": "^1.0.0-rc.3",
     "@bolt/components-button-group": "^1.0.0-rc.3",
     "@bolt/components-card": "^1.0.0-rc.3",
@@ -49,6 +50,7 @@
     "@bolt/components-sticky": "^1.0.0-rc.3",
     "@bolt/components-teaser": "^1.0.0-rc.3",
     "@bolt/components-unordered-list": "^1.0.0-rc.3",
+    "@bolt/components-video": "^1.0.0-rc.3",
     "@bolt/core": "^1.0.0-rc.3",
     "@bolt/global": "^1.0.0-rc.3"
   }
