--- a/packages/build-tools/package.json
+++ b/packages/build-tools/package.json
@@ -22,6 +22,7 @@
     }
   ],
   "dependencies": {
+    "@bolt/babel-preset-bolt": "1.0.0-rc.5",
     "@theme-tools/sass-export-data": "^1.0.3",
     "@theme-tools/sass-import-globbing": "^1.0.0",
     "autoprefixer": "^7.2.4",
