--- a/packages/core-php/composer.json
+++ b/packages/core-php/composer.json
@@ -31,8 +31,8 @@
     "basaltinc/twig-tools": "^1.3.4",
     "michelf/php-markdown": "^1.8.0",
     "mexitek/phpcolors": "^0.4.0",
-    "drupal/core-render": "8.4.x-dev",
-    "drupal/core-utility": "8.4.x-dev",
+    "drupal/core-render": "^8.0.0",
+    "drupal/core-utility": "^8.0.0",
     "webmozart/path-util": "^2.3",
     "shudrum/array-finder": "^1.1",
     "gregwar/image": "^2.0",
