--- a/apps/pattern-lab/composer.json
+++ b/apps/pattern-lab/composer.json
@@ -37,6 +37,9 @@
       {
         "type": "path",
         "url": "../../packages/core-php"
+      },      {
+        "type": "path",
+        "url": "../../packages/drupal-stubs"
       },
       {
         "type": "vcs",
@@ -47,6 +50,7 @@
     "minimum-stability": "dev",
     "require": {
       "bolt-design-system/core-php": "*",
+      "bolt-design-system/drupal-stubs": "*",
       "php": ">=7.0",
       "twig/twig": "^1.35.0",
       "cweagans/composer-patches": "~1.0",
