--- a/packages/core-php/composer.json
+++ b/packages/core-php/composer.json
@@ -13,17 +13,9 @@
       "name": "Evan Lovely"
     }
   ],
-  "repositories": [
-    {
-      "type": "vcs",
-      "url": "https://github.com/drupal/core-render",
-      "no-api": true
-    }
-  ],
   "autoload": {
     "psr-4": {
-      "Bolt\\": "src/",
-      "Drupal\\Core\\": "src/libs/Drupal/Core/"
+      "Bolt\\": "src/"
     }
   },
   "require": {
@@ -31,8 +23,6 @@
     "basaltinc/twig-tools": "^1.3.4",
     "michelf/php-markdown": "^1.8.0",
     "mexitek/phpcolors": "^0.4.0",
-    "drupal/core-render": "^8.0.0",
-    "drupal/core-utility": "^8.0.0",
     "webmozart/path-util": "^2.3",
     "shudrum/array-finder": "^1.1",
     "gregwar/image": "^2.0",
