Set release tag for 0.x branch
This prevents any packages published from this branch from getting the
latest tag.

--- a/package.json
+++ b/package.json
@@ -68,6 +68,9 @@
       "warnOnFail": false
     }
   },
+  "publishConfig": {
+    "tag": "release-0.x"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/bolt-design-system/bolt.git"
