--- a/packages/components/bolt-tooltip/package.json
+++ b/packages/components/bolt-tooltip/package.json
@@ -18,6 +18,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/core": "^1.0.0-rc.3"
+    "@bolt/core": "^1.0.0-rc.3",
+    "@bolt/components-button": "^1.0.0-rc.3"
   }
 }
