--- a/packages/build-tools/package.json
+++ b/packages/build-tools/package.json
@@ -55,6 +55,7 @@
     "sass-loader": "^6.0.6",
     "semver": "^5.4.1",
     "sharp": "^0.19.0",
+    "svgo": "^1.0.5",
     "string-replace-loader": "^1.3.0",
     "style-loader": "^0.19.1",
     "uglifyjs-webpack-plugin": "^1.2.0",
