--- a/packages/components/bolt-image/package.json
+++ b/packages/components/bolt-image/package.json
@@ -34,7 +34,7 @@
   },
   "dependencies": {
     "@bolt/core": "^1.0.0-rc.7",
-    "lazysizes": "^4.0.0-rc4"
+    "lazysizes": "^4.0.1"
   },
   "schema": "image.schema.yml"
 }
