--- a/package.json
+++ b/package.json
@@ -42,15 +42,14 @@
     "clean": "npm-run-all --parallel clean:*",
     "prepublishOnly": "npm run build && node scripts/monorepo-tests.js",
     "snyk-protect": "snyk protect",
-    "Xlint:editorconfig": "editorconfig-checker --exclude-pattern './www/**/*' --exclude-pattern './**/sandbox/**/*'",
-    "lint:js": "eslint --max-warnings 0 'packages/**/*.js' 'apps/**/*.js'",
+    "lint:editorconfig": "editorconfig-checker --exclude-pattern './www/**/*' --exclude-pattern './**/sandbox/**/*'",
+    "lint:js": "eslint 'packages/**/*.js' 'apps/**/*.js'",
     "lint:js:fix": "npm run lint:js -- --fix",
-    "Xlint:sh": "which shellcheck; if [ $? -eq 0 ]; then shellcheck scripts/*.sh ; else echo 'Shell script linting requires `shellcheck` to be installed, skipping for now; use `brew install shellcheck` to install ~ https://github.com/koalaman/shellcheck '; fi",
+    "lint:sh": "which shellcheck; if [ $? -eq 0 ]; then shellcheck scripts/*.sh ; else echo 'Shell script linting requires `shellcheck` to be installed, skipping for now; use `brew install shellcheck` to install ~ https://github.com/koalaman/shellcheck '; fi",
     "lint:style": "stylelint 'packages/**/*.scss' 'apps/**/*.scss'",
     "lint:style:fix": "npm run lint:style -- --fix",
-    "lint:twig": "./packages/core-php/vendor/bin/twig-lint lint packages --only-print-errors && ./packages/core-php/vendor/bin/twig-lint lint apps --only-print-errors --exclude=apps/drupal-lab",
+    "lint:twig": "./packages/core-php/vendor/bin/twig-lint lint packages --only-print-errors && ./packages/core-php/vendor/bin/twig-lint lint apps --only-print-errors",
     "lint": "npm-run-all --continue-on-error --serial lint:*",
-    "prepush": "npm run lint && npm run test",
     "test:js": "jest",
     "test:js:watch": "jest --watch",
     "test:php": "cd packages/core-php && composer run test",
