Adding Yaml Lint

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "lint:style": "stylelint 'packages/**/*.scss' 'apps/**/*.scss'",
     "lint:style:fix": "npm run lint:style -- --fix",
     "lint:twig": "./packages/core-php/vendor/bin/twig-lint lint packages --only-print-errors && ./packages/core-php/vendor/bin/twig-lint lint apps --only-print-errors",
+    "lint:yaml": "yamllint 'packages/**/*.yml' --ignore='**/vendor/**'",
     "lint": "npm-run-all --continue-on-error --serial lint:*",
     "test:js": "jest",
     "test:js:watch": "jest --watch",
@@ -82,7 +83,8 @@
     "lerna": "^2.5.1",
     "node-fetch": "^2.0.0",
     "npm-run-all": "^4.1.2",
-    "web-component-tester": "^6.3.0"
+    "web-component-tester": "^6.3.0",
+    "yaml-lint": "^1.2.2"
   },
   "workspaces": [
     "packages/components/bolt-action-blocks",
