--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "jest": "^22.4.0",
     "lerna": "^2.5.1",
     "node-fetch": "^2.0.0",
+    "now": "^11.0.6",
     "npm-run-all": "^4.1.2",
     "web-component-tester": "^6.3.0",
     "yaml-lint": "^1.2.2"
