--- a/package.json
+++ b/package.json
@@ -24,18 +24,18 @@
     "setup": "npm run bootstrap && npm run composer",
     "build:pl": "cd apps/pattern-lab && npm run build:prod",
     "build:bolt-site": "cd apps/bolt-site && npm run build:prod",
-    "build:example-drupal-theme": "cd apps/example_drupal_theme && npm run build:prod",
-    "build:drupal-lab": "cd apps/drupal-lab && cd web/themes/flash && npm run build && cd - && composer run build",
+    "Xbuild:example-drupal-theme": "cd apps/example_drupal_theme && npm run build:prod",
+    "Xbuild:drupal-lab": "cd apps/drupal-lab && cd web/themes/flash && npm run build && cd - && composer run build",
     "build:icons": "lerna exec --scope @bolt/components-icons -- npm run build",
     "build": "npm-run-all --serial build:*",
     "composer:pl": "cd apps/pattern-lab && rm -rf vendor composer.lock && composer install --no-interaction",
     "composer:core-php": "cd packages/core-php && rm -rf vendor composer.lock && composer install --no-interaction",
     "composer:bolt-site": "cd apps/bolt-site && rm -rf vendor composer.lock && composer install --no-interaction",
-    "composer:drupal-lab": "cd apps/drupal-lab && rm -rf vendor web/modules/contrib composer.lock && composer install --no-interaction",
+    "Xcomposer:drupal-lab": "cd apps/drupal-lab && rm -rf vendor web/modules/contrib composer.lock && composer install --no-interaction",
     "composer": "npm-run-all --serial composer:*",
     "bootstrap": "lerna bootstrap --reject-cycles",
     "postbootstrap": "npm run build:icons && node scripts/monorepo-tests.js",
-    "predeploy": "npm run build",
+    "Xpredeploy": "npm run build",
     "deploy": "./scripts/deploy.sh",
     "clean:git": "git clean -xdf && rm -rf apps/**/vendor apps/**/node_modules && find . -empty -type d -delete",
     "clean:lerna": "lerna clean -Y",
