--- a/apps/bolt-site/package.json
+++ b/apps/bolt-site/package.json
@@ -37,7 +37,9 @@
     "@bolt/components-image": "^1.0.3",
     "@bolt/components-link": "^1.0.2",
     "@bolt/components-logo": "^1.0.3",
-    "@bolt/components-nav-bar": "^1.0.3",
+    "@bolt/components-navbar": "^1.0.3",
+    "@bolt/components-navlink": "^1.0.3",
+    "@bolt/components-nav": "^1.0.3",
     "@bolt/components-ordered-list": "^1.0.3",
     "@bolt/components-page-footer": "^1.0.3",
     "@bolt/components-page-header": "^1.0.3",
