--- a/apps/drupal-lab/config/sync/core.extension.yml
+++ b/apps/drupal-lab/config/sync/core.extension.yml
@@ -33,6 +33,6 @@ theme:
   seven: 0
   bartik: 0
   flash: 0
-profile: minimal
+profile: config_installer
 _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
