--- a/packages/components/bolt-share/package.json
+++ b/packages/components/bolt-share/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bolt/components-share",
   "description": "Share Component in Bolt",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
   "repository": {
@@ -17,11 +17,11 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/components-block-list": "^1.1.0",
-    "@bolt/components-copy-to-clipboard": "^1.1.0",
-    "@bolt/components-icon": "^1.1.0",
-    "@bolt/components-link": "^1.0.0-rc.9",
-    "@bolt/components-tooltip": "^1.1.0",
-    "@bolt/core": "^1.1.0"
+    "@bolt/components-block-list": "^1.1.1",
+    "@bolt/components-copy-to-clipboard": "^1.1.1",
+    "@bolt/components-icon": "^1.1.1",
+    "@bolt/components-link": "^1.1.1",
+    "@bolt/components-tooltip": "^1.1.1",
+    "@bolt/core": "^1.1.1"
   }
 }
